Fix wrapping in Available Trades

--- a/styles.css
+++ b/styles.css
@@ -1786,7 +1786,7 @@ div.archaeologyGlyphContainer div.archaeologyGlyphHeader {
 	width:185px;
 }
 .tradeInfo .tradeAsking {
-	width:75px;
+	width:60px;
 }
 .tradeInfo .tradeAsking img {
 	vertical-align:top;
